--- a/clase-01/index.html
+++ b/clase-01/index.html
@@ -11,7 +11,7 @@
             :root { --bs-font-sans-serif: "Work Sans", sans-serif; }
             @media (min-width: 992px) { header p{ text-align: justify; text-justify: inter-word; } }
         </style>
-        <title>Reemplaza este título que se muestra en la ventana de tu navegador</title>
+        <title>Vida y Obras de Gyorgy Kepes</title>
     </head>
     <body>
         <header class="container">
@@ -112,7 +112,7 @@
                     <div class="col-12">
                         <p class="d-flex justify-content-between small p-1 m-0">
                             <!--reemplaza el # que sigue con la URL de tu cuenta en GitHub-->
-                            <a href="#" class="link-dark">Nombre Apellido</a>
+                            <a href="#" class="link-dark">Macarena Ruiz</a>
                             <a href="https://github.com/profesorfaco/dno075-2022-1/" class="link-dark">Infografía Digital</a>
                             <a href="https://github.com/profesorfaco/dno075-2022-1/tree/main/clase-01" class="d-none d-lg-inline link-dark">Lunes 7 de marzo, 2022</a>
                         </p>
