--- a/clase-01/index.html
+++ b/clase-01/index.html
@@ -112,7 +112,7 @@
                     <div class="col-12">
                         <p class="d-flex justify-content-between small p-1 m-0">
                             <!--reemplaza el # que sigue con la URL de tu cuenta en GitHub-->
-                            <a href="#" class="link-dark">Macarena Ruiz</a>
+                            <a href="https://macaruiz.github.io/id-clase-01/" class="link-dark">Macarena Ruiz</a>
                             <a href="https://github.com/profesorfaco/dno075-2022-1/" class="link-dark">Infografía Digital</a>
                             <a href="https://github.com/profesorfaco/dno075-2022-1/tree/main/clase-01" class="d-none d-lg-inline link-dark">Lunes 7 de marzo, 2022</a>
                         </p>
