--- a/clase-01/index.html
+++ b/clase-01/index.html
@@ -22,7 +22,7 @@
 
                     <h2 class="mb-5 text-center text-uppercase fs-5">Macarena Ruiz</h2>
 
-                    <p class="lead">Reemplaza este párrafo con un texto introductorio, de una extensión máxima de cien palabras. En este y todos los reemplazos, respeta los colores del código fuente en tu editor. Los colores son indicaciones. Imagina que el editor de código fuente te está indicando: En el lenguaje que reconozco, esto es algo que no debes confundir con eso.</p>
+                    <p class="lead">Gyorgy Kepes fue un pintor, diseñador, educador y teórico húngaro/americano nacido en Selyp, Hungría, el dia 4 de octubre de 1906 y fallecido el dia 29 de diciembre de 2001, en Estados Unidos. Fue considerado uno de los más grandes visionarios de las artes visuales. Estudió en la Real Academia de Bellas Artes de Budapest en donde comenzó desarrollando trabajos de carácter impresionista</p>
 
                     <p>Reemplaza este párrafo con un texto que complemente al introductorio. Puedes extender este párrafo hasta las doscientas palabras. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque ultricies elit eu pellentesque. Fusce a justo pellentesque, scelerisque tellus in, aliquet est. Curabitur nec porttitor nunc. Nullam elementum orci eget rhoncus congue. Proin quis laoreet tellus. Vivamus molestie ullamcorpernisi, sed aliquet magna molestie id. Vivamus semper ipsum eget.</p>
 
