--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <main class="container">
             <div class="row g-4 pb-5">
-                <!--primera imagen-->
+                <!--kepes-1.png-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
                         <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
