--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
         <main class="container">
             <div class="row g-4 pb-5">
-                <!--kepes-1.png-->
+                <!--primera imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
+                        <img loading="lazy" src="img/kepes-1.png" class="w-100" alt="describe lo que se ve en la imagen" />
                         <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
                     </figure>
                 </div>
