--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <!--primera imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
-                        <img loading="lazy" src="img/kepes-1.gif" class="w-100" alt="describe lo que se ve en la imagen" />
+                        <img loading="lazy" src="img/kepes-1.jpg" class="w-100" alt="describe lo que se ve en la imagen" />
                         <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
                     </figure>
                 </div>
