--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
                         <img loading="lazy" src="img/kepes-1.jpg" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <figcaption class="p-3">Untilted String Structure Lines Circles.</figcaption>
                     </figure>
                 </div>
                 <!--segunda imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
                         <img loading="lazy" src="img/kepes-2.jpg" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <figcaption class="p-3">Cloud.</figcaption>
                     </figure>
                 </div>
                 <!--tercera imagen-->
