--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
                         <img loading="lazy" src="img/kepes-1.jpg" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Untilted String Structure Lines Circles.</figcaption>
+                        <figcaption class="p-3">Untilted String Structure Lines Circles. Constructivismo. 1940.</figcaption>
                     </figure>
                 </div>
                 <!--segunda imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
                         <img loading="lazy" src="img/kepes-3.jpg" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Cloud.</figcaption>
+                        <figcaption class="p-3">Cloud. Constructivismo, Op Art.</figcaption>
                     </figure>
                 </div>
                 <!--tercera imagen-->
