--- a/index.html
+++ b/index.html
@@ -49,57 +49,57 @@
                 <!--tercera imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <img loading="lazy" src="img/kepes-4.jpg" class="w-100" alt="describe lo que se ve en la imagen" />
+                        <figcaption class="p-3">Untilted. Constructivismo. 1938.</figcaption>
                     </figure>
                 </div>
                 <!--cuarta imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <img loading="lazy" src="img/kepes-5.jpg" class="w-100" alt="describe lo que se ve en la imagen" />
+                        <figcaption class="p-3">Magnetic Fields. Constructivismo. 1938.</figcaption>
                     </figure>
                 </div>
                 <!--quinta imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <img loading="lazy" src="img/kepes-6.jpg" class="w-100" alt="describe lo que se ve en la imagen" />
+                        <figcaption class="p-3">Hungarian Past (Hungarian Memory). Costructivismo. 1937-1938.</figcaption>
                     </figure>
                 </div>
                 <!--sexta imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <img loading="lazy" src="img/kepes-7.jpg" class="w-100" alt="describe lo que se ve en la imagen" />
+                        <figcaption class="p-3">Untilted Magnetic Fields and Compass. Constructivismo. 1938-1939.</figcaption>
                     </figure>
                 </div>
                 <!--séptima imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <img loading="lazy" src="img/kepes-8.jpg" class="w-100" alt="describe lo que se ve en la imagen" />
+                        <figcaption class="p-3">Untilted. Constructivismo. 1939-1940.</figcaption>
                     </figure>
                 </div>
                 <!--octava imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <img loading="lazy" src="img/kepes-9.jpg" class="w-100" alt="describe lo que se ve en la imagen" />
+                        <figcaption class="p-3">Untilted. Constructivismo.</figcaption>
                     </figure>
                 </div>
                 <!--novena imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <img loading="lazy" src="img/kepes-10.jpg" class="w-100" alt="describe lo que se ve en la imagen" />
+                        <figcaption class="p-3">Untilted Photogram. Constructivismo, Op Art. 1981.</figcaption>
                     </figure>
                 </div>
                 <!--décima imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="shadow-sm">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <img loading="lazy" src="img/kepes-11.jpg" class="w-100" alt="describe lo que se ve en la imagen" />
+                        <figcaption class="p-3">Untilted. Constructivismo.</figcaption>
                     </figure>
                 </div>
                 <!--no hay más imágenes-->
