--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                     <p class="lead">Gyorgy Kepes fue un pintor, diseñador, educador y teórico húngaro/americano nacido en Selyp, Hungría, el dia 4 de octubre de 1906 y fallecido el dia 29 de diciembre de 2001, en Estados Unidos. Fue considerado uno de los más grandes visionarios de las artes visuales. Estudió en la Real Academia de Bellas Artes de Budapest en donde comenzó desarrollando trabajos de carácter impresionista. A finales de la década de 1920, Kepes dejó a un lado la pintura temporalmente para centrarse en el cine. El año 1930, y tras una invitación del profesor de la Bauhaus y también húngaro Laszlo Moholy-Nagy, se trasladó a Berlín, donde trabajó como diseñador, expositor y escenógrafo. Tras su llegada a los Estados Unidos en 1937, impartió clases de diseño en New Bauhaus en Chicago y también en la Escuela de diseño industrial de Chicago. En 1967 fundó el Centro de Estudios Visuales Avanzados en el Instituto de Tecnología de Massachusetts, MIT, donde trabajó hasta su retiro en 1974.</p>
 
-                    <p>Reemplaza este párrafo con un texto que complemente al introductorio. Puedes extender este párrafo hasta las doscientas palabras. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque ultricies elit eu pellentesque. Fusce a justo pellentesque, scelerisque tellus in, aliquet est. Curabitur nec porttitor nunc. Nullam elementum orci eget rhoncus congue. Proin quis laoreet tellus. Vivamus molestie ullamcorpernisi, sed aliquet magna molestie id. Vivamus semper ipsum eget.</p>
+                    <p>Kepes también hizo trabajos para Fortune Magazine como diseñador gráfico en los años 40 y por cuyos trabajos se dice que unió en matrimonio el arte y la tecnología.</p>
 
                 </div>
             </div>
